<resources>
    <string name="app_name">ToDo App</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="pinned">PINNED</string>
    <string name="others">OTHERS</string>
    <string name="take_a_note">take a note</string>
    <string name="note_title">Note title</string>
    <string name="your_note">Your Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="back_to_list">Back to list</string>
    <string name="pin_unpin_note">Pin/Unpin Note</string>
    <string name="list_item">List Item</string>
    <string name="checked_item">"%1$d Checked Item"</string>
</resources>
